fixed overlapping

--- a/static/styles.css
+++ b/static/styles.css
@@ -285,7 +285,7 @@ nav {
   }
 }
 @media only screen and (max-width: 1120px){
-  body {
+  html, body {
     overflow-x: hidden;
   }
 
